--- a/package.json
+++ b/package.json
@@ -1,19 +1,266 @@
 {
   "name": "7.7",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test:booking": "npx cypress run --record --key 9064d98b-7e08-4287-ab13-957b119f351b --group booking --spec \"cypress/e2e/booking.cy.js\" --ci-build-id 17",
-    "test:cinema": "npx cypress run --record --key 9064d98b-7e08-4287-ab13-957b119f351b --group cinema --spec \"cypress/e2e/cinema.cy.js\" --ci-build-id 17",
-    "test:login": "npx cypress run --record --key 9064d98b-7e08-4287-ab13-957b119f351b --group login --spec \"cypress/e2e/login.cy.js\" --ci-build-id 17",
-    "test:parallel": "npm run test:booking & npm run test:cinema & npm run test:login",
+    "test:authorization:chrome": "npx cypress run --record --key 51be9f53-6939-4ac5-aaba-79803287fa7f --group booking --spec \"cypress/e2e/Authorization/**/*\" --browser chrome",
+    "test:booking:chrome": "npx cypress run --record --key 51be9f53-6939-4ac5-aaba-79803287fa7f --group cinema --spec \"cypress/e2e/booking/**/*\" --browser chrome",
+    "test:parallel:chrome": "npm-run-all --parallel test:authorization:chrome test:booking:chrome",
+    "test:authorization:firefox": "npx cypress run --record --key 51be9f53-6939-4ac5-aaba-79803287fa7f --group booking --spec \"cypress/e2e/Authorization/**/*\" --browser firefox",
+    "test:booking:firefox": "npx cypress run --record --key 51be9f53-6939-4ac5-aaba-79803287fa7f --group cinema --spec \"cypress/e2e/booking/**/*\" --browser firefox",
+    "test:parallel:firefox": "npm-run-all --parallel test:authorization:firefox test:booking:firefox",
+    "test:authorization:electron": "npx cypress run --record --key 51be9f53-6939-4ac5-aaba-79803287fa7f --group booking --spec \"cypress/e2e/Authorization/**/*\" --browser electron",
+    "test:booking:electron": "npx cypress run --record --key 51be9f53-6939-4ac5-aaba-79803287fa7f --group cinema --spec \"cypress/e2e/booking/**/*\" --browser electron",
+    "test:parallel:electron": "npm-run-all --parallel test:authorization:electron test:booking:electron",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.4.0"
-  }
+    "cypress": "^13.4.0",
+    "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "aggregate-error": "^3.1.0",
+    "ansi-colors": "^4.1.3",
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "arch": "^2.2.0",
+    "array-buffer-byte-length": "^1.0.0",
+    "arraybuffer.prototype.slice": "^1.0.2",
+    "asn1": "^0.2.6",
+    "assert-plus": "^1.0.0",
+    "astral-regex": "^2.0.0",
+    "async": "^3.2.4",
+    "asynckit": "^0.4.0",
+    "at-least-node": "^1.0.0",
+    "available-typed-arrays": "^1.0.5",
+    "aws-sign2": "^0.7.0",
+    "aws4": "^1.12.0",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "bcrypt-pbkdf": "^1.0.2",
+    "blob-util": "^2.0.2",
+    "bluebird": "^3.7.2",
+    "brace-expansion": "^1.1.11",
+    "buffer": "^5.7.1",
+    "buffer-crc32": "^0.2.13",
+    "cachedir": "^2.4.0",
+    "call-bind": "^1.0.5",
+    "caseless": "^0.12.0",
+    "chalk": "^4.1.2",
+    "check-more-types": "^2.24.0",
+    "ci-info": "^3.9.0",
+    "clean-stack": "^2.2.0",
+    "cli-cursor": "^3.1.0",
+    "cli-table3": "^0.6.3",
+    "cli-truncate": "^2.1.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "colorette": "^2.0.20",
+    "combined-stream": "^1.0.8",
+    "commander": "^6.2.1",
+    "common-tags": "^1.8.2",
+    "concat-map": "^0.0.1",
+    "core-util-is": "^1.0.2",
+    "cross-spawn": "^7.0.3",
+    "dashdash": "^1.14.1",
+    "dayjs": "^1.11.10",
+    "debug": "^4.3.4",
+    "define-data-property": "^1.1.1",
+    "define-properties": "^1.2.1",
+    "delayed-stream": "^1.0.0",
+    "ecc-jsbn": "^0.1.2",
+    "emoji-regex": "^8.0.0",
+    "end-of-stream": "^1.4.4",
+    "enquirer": "^2.4.1",
+    "error-ex": "^1.3.2",
+    "es-abstract": "^1.22.3",
+    "es-set-tostringtag": "^2.0.2",
+    "es-to-primitive": "^1.2.1",
+    "escape-string-regexp": "^1.0.5",
+    "eventemitter2": "^6.4.7",
+    "execa": "^4.1.0",
+    "executable": "^4.1.1",
+    "extend": "^3.0.2",
+    "extract-zip": "^2.0.1",
+    "extsprintf": "^1.3.0",
+    "fd-slicer": "^1.1.0",
+    "figures": "^3.2.0",
+    "for-each": "^0.3.3",
+    "forever-agent": "^0.6.1",
+    "form-data": "^2.3.3",
+    "fs-extra": "^9.1.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "function.prototype.name": "^1.1.6",
+    "functions-have-names": "^1.2.3",
+    "get-intrinsic": "^1.2.2",
+    "get-stream": "^5.2.0",
+    "get-symbol-description": "^1.0.0",
+    "getos": "^3.2.1",
+    "getpass": "^0.1.7",
+    "glob": "^7.2.3",
+    "global-dirs": "^3.0.1",
+    "globalthis": "^1.0.3",
+    "gopd": "^1.0.1",
+    "graceful-fs": "^4.2.11",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.1",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "hasown": "^2.0.0",
+    "hosted-git-info": "^2.8.9",
+    "http-signature": "^1.3.6",
+    "human-signals": "^1.1.1",
+    "ieee754": "^1.2.1",
+    "indent-string": "^4.0.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^2.0.0",
+    "internal-slot": "^1.0.6",
+    "is-array-buffer": "^3.0.2",
+    "is-arrayish": "^0.2.1",
+    "is-bigint": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-callable": "^1.2.7",
+    "is-ci": "^3.0.1",
+    "is-core-module": "^2.13.1",
+    "is-date-object": "^1.0.5",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-installed-globally": "^0.4.0",
+    "is-negative-zero": "^2.0.2",
+    "is-number-object": "^1.0.7",
+    "is-path-inside": "^3.0.3",
+    "is-regex": "^1.1.4",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-stream": "^2.0.1",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.12",
+    "is-typedarray": "^1.0.0",
+    "is-unicode-supported": "^0.1.0",
+    "is-weakref": "^1.0.2",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "isstream": "^0.1.2",
+    "jsbn": "^0.1.1",
+    "json-parse-better-errors": "^1.0.2",
+    "json-schema": "^0.4.0",
+    "json-stringify-safe": "^5.0.1",
+    "jsonfile": "^6.1.0",
+    "jsprim": "^2.0.2",
+    "lazy-ass": "^1.6.0",
+    "listr2": "^3.14.0",
+    "load-json-file": "^4.0.0",
+    "lodash": "^4.17.21",
+    "lodash.once": "^4.1.1",
+    "log-symbols": "^4.1.0",
+    "log-update": "^4.0.0",
+    "lru-cache": "^6.0.0",
+    "memorystream": "^0.3.1",
+    "merge-stream": "^2.0.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "ms": "^2.1.2",
+    "nice-try": "^1.0.5",
+    "normalize-package-data": "^2.5.0",
+    "npm-run-path": "^4.0.1",
+    "object-inspect": "^1.13.1",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.4",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "ospath": "^1.2.2",
+    "p-map": "^4.0.0",
+    "parse-json": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^3.0.0",
+    "pend": "^1.2.0",
+    "performance-now": "^2.1.0",
+    "pidtree": "^0.3.1",
+    "pify": "^2.3.0",
+    "pretty-bytes": "^5.6.0",
+    "process": "^0.11.10",
+    "proxy-from-env": "^1.0.0",
+    "psl": "^1.9.0",
+    "pump": "^3.0.0",
+    "punycode": "^2.3.1",
+    "qs": "^6.10.4",
+    "querystringify": "^2.2.0",
+    "read-pkg": "^3.0.0",
+    "regexp.prototype.flags": "^1.5.1",
+    "request-progress": "^3.0.0",
+    "requires-port": "^1.0.0",
+    "resolve": "^1.22.8",
+    "restore-cursor": "^3.1.0",
+    "rfdc": "^1.3.0",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.8.1",
+    "safe-array-concat": "^1.0.1",
+    "safe-buffer": "^5.2.1",
+    "safe-regex-test": "^1.0.0",
+    "safer-buffer": "^2.1.2",
+    "semver": "^7.5.4",
+    "set-function-length": "^1.1.1",
+    "set-function-name": "^2.0.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "shell-quote": "^1.8.1",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.7",
+    "slice-ansi": "^3.0.0",
+    "spdx-correct": "^3.2.0",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-license-ids": "^3.0.16",
+    "sshpk": "^1.18.0",
+    "string-width": "^4.2.3",
+    "string.prototype.padend": "^3.1.5",
+    "string.prototype.trim": "^1.2.8",
+    "string.prototype.trimend": "^1.0.7",
+    "string.prototype.trimstart": "^1.0.7",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^3.0.0",
+    "strip-final-newline": "^2.0.0",
+    "supports-color": "^8.1.1",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "throttleit": "^1.0.0",
+    "through": "^2.3.8",
+    "tmp": "^0.2.1",
+    "tough-cookie": "^4.1.3",
+    "tslib": "^2.6.2",
+    "tunnel-agent": "^0.6.0",
+    "tweetnacl": "^0.14.5",
+    "type-fest": "^0.21.3",
+    "typed-array-buffer": "^1.0.0",
+    "typed-array-byte-length": "^1.0.0",
+    "typed-array-byte-offset": "^1.0.0",
+    "typed-array-length": "^1.0.4",
+    "unbox-primitive": "^1.0.2",
+    "undici-types": "^5.26.5",
+    "universalify": "^2.0.0",
+    "untildify": "^4.0.0",
+    "url-parse": "^1.5.10",
+    "uuid": "^8.3.2",
+    "validate-npm-package-license": "^3.0.4",
+    "verror": "^1.10.0",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "which-typed-array": "^1.1.13",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "yallist": "^4.0.0",
+    "yauzl": "^2.10.0"
+  },
+  "description": ""
 }
